8241627: Updating ASM to 8.0.1 for JDK 15
Co-authored-by: Igor Ignatyev <igor.ignatyev@oracle.com>
Reviewed-by: psandoz, chegar